feat: add jwt authentication for external clients
